--- a/LSA.ipynb
+++ b/LSA.ipynb
@@ -79,11 +79,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "uASC5BGXMRWU",
-        "outputId": "04f5b23a-3752-40e0-e2d1-c63e823fb394",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uASC5BGXMRWU",
+        "outputId": "04f5b23a-3752-40e0-e2d1-c63e823fb394"
       },
       "outputs": [
         {
@@ -188,33 +188,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "UT5wbmStMRWW",
-        "outputId": "fd5a0bdd-521a-46d9-daa0-810fdecb70fa"
+        "outputId": "7df9b39a-31dd-402e-ec95-ba492d1d2be4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Shape: (2847, 40182)\n",
-            "Is Sparse: True\n",
-            "Sparsity: 99.61%\n",
-            "Shape: (40182, 40182)\n",
-            "Is Sparse: True\n",
-            "Sparsity: 99.61%\n"
+            "(2847, 40182)\n",
+            "is data sparse: True\n",
+            "sparsity =  99.61398940056323\n",
+            "(40182, 40182)\n",
+            "is data sparse: True\n",
+            "sparsity =  96.20188906490104\n"
           ]
         }
       ],
       "source": [
         "def vectorize(train_data):\n",
         "    # TODO: Vectorize the training data using count vectorizer\n",
-        "    pass\n",
+        "    countVectorizer = CountVectorizer()\n",
+        "    coOccurrence_matrix = countVectorizer.fit_transform(train_data)\n",
+        "    return countVectorizer, coOccurrence_matrix\n",
         "\n",
         "def analyze(data):\n",
         "    # TODO: print Shape, Is Sparse and Sparsity using scipy\n",
-        "    pass\n",
+        "    data_shape = data.shape\n",
+        "    print(data_shape)\n",
+        "    print(\"is data sparse:\", scipy.sparse.isspmatrix(data))\n",
+        "    sparcity = (1 - data.nnz / (data_shape[1] * data_shape[0])) * 100\n",
+        "    print(\"sparsity = \", sparcity)\n",
         "\n",
         "count_vect, X_train_counts = vectorize(train.data)\n",
         "analyze(X_train_counts)\n",
