--- a/LSA.ipynb
+++ b/LSA.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "hMAUtBiFMRWP"
       },
@@ -77,13 +77,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uASC5BGXMRWU",
-        "outputId": "04f5b23a-3752-40e0-e2d1-c63e823fb394"
+        "outputId": "b4953097-fdf8-4f85-d0a1-526b8a9d108f"
       },
       "outputs": [
         {
@@ -188,13 +188,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UT5wbmStMRWW",
-        "outputId": "7df9b39a-31dd-402e-ec95-ba492d1d2be4"
+        "outputId": "3b93a100-8f61-4a6b-8a02-500941e35d8b"
       },
       "outputs": [
         {
@@ -251,15 +251,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "gTJAoS0jMRWX",
-        "outputId": "d3e6e0f0-c2bb-4d5f-9702-53784257361b"
+        "outputId": "2720ba5d-822d-4d8b-e5e8-fbbf0dd2aa5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "U: (40182, 2)\n",
             "S: (2,)\n",
@@ -269,10 +272,28 @@
       ],
       "source": [
         "# TODO: Use SVD to decompose C into U, S, V^H using scipy\n",
+        "u, s, vh = scipy.sparse.linalg.svds(C.astype(float), k=2)\n",
         "print(f'U: {u.shape}')\n",
         "print(f'S: {s.shape}')\n",
         "print(f'V^H: {vh.shape}')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> The SVD matrix for a document-term co-occurrence matrix, such as a document-term matrix, decomposes the matrix into three component matrices using numerical decomposition methods:\n",
+        "- Matrix $U$ contains the eigenvectors for documents.\n",
+        "- Matrix $Σ$ is a diagonal matrix that holds values close to zero to choose a lower dimensionality.\n",
+        "- Matrix $V^T$ contains the eigenvectors for terms (words).\n",
+        "\n",
+        ">These matrices have a direct relationship with the original document-term matrix. The original matrix can be expressed as:\n",
+        "$\\text{Original Matrix} = U \\times Σ \\times V^T $\n",
+        "\n",
+        ">In other words, using matrix $U$, we can determine how each document is positioned in a lower-dimensional feature space, and using matrix $V^T$, we can determine how each term (word) relates to other terms.\n"
+      ],
+      "metadata": {
+        "id": "tryKVmxpf8U0"
+      }
     },
     {
       "cell_type": "markdown",
@@ -284,15 +305,20 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "_jMF8KNpMRWY"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "#Your answer"
-      ]
+        "\n",
+        "\n",
+        "\n",
+        "> By choosing the top k singular values of a matrix, in the reconstructed matrix\n",
+        "we will see a matrix with lower rank than the original matrix by removing less important singular values.\n",
+        "This is called a truncated SVD.\n",
+        "For finding the best k, we will have to look at our needs and resources to decide how much information to keep.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CqHktSUXgmXA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -305,13 +331,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "-gD-YemTMRWZ"
       },
       "outputs": [],
       "source": [
-        "#Your answer"
+        "# reconstructed_matrix = np.linalg.multi_dot([u, np.diag(s), vh])"
       ]
     },
     {
